Fix layout issue

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,6 +51,7 @@ p {
 }
 
 .input-label {
+	clear: left;
 	margin-bottom: 4px;
 	margin-top: 12px;
 }
